--- a/app/components/inventory/inventory.partial.html
+++ b/app/components/inventory/inventory.partial.html
@@ -31,7 +31,7 @@
         <!--<img  ng-src="{{player.playerAd.image_url}}">-->
       <!--</a>-->
       <adsense ad-client="ca-pub-7408805581120581" ad-slot="{{adsenseSlots[$index]}}"
-               inline-style="display:inline-block;width:320px;height:50px;"
+               inline-style="display:inline-block;width:320px;height:50px;" player-ad="true"
                ng-if="!player.playerAd">
       </adsense>
     </div>
