--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -123,6 +123,8 @@
             <span class="first-in-lighthouse__player" ng-repeat="player in lb.players track by $index">
               <a ng-href="https://my.trials.report/{{$parent.lb.platform === 1 ? 'xbox' : 'ps'}}/{{player}}" ng-bind="player" target="_blank"></a>
             </span>
+            <span class="first-in-lighthouse__player" ng-if="lb.players.length <= 2">&nbsp;</span>
+            <span class="first-in-lighthouse__player" ng-if="lb.players.length <= 1">&nbsp;</span>
             <div class="first-in-lighthouse__platform">
               <img ng-if="$parent.lb.platform === 1" src="assets/img/xbox.svg" alt="Xbox">
               <img ng-if="$parent.lb.platform === 2" src="assets/img/ps.svg" alt="PlayStation">
