Styled button to open Language & Settings modal

--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -1,4 +1,4 @@
-<div class="header__content shadow-z-1">
+<div class="header__content shadow-z-2">
   <div class="title-bar" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}">
     <div class="title-bar__content">
       <div class="title-bar__title">
@@ -88,7 +88,14 @@
               data-template-url="shared/modals/map.modal.html" bs-modal>
         Overview
       </button>
+    </div>
   </div>
+</div>
+
+<div class="settings-btn shadow-z-1">
+  <button class="btn btn-inline">
+    <i class="material-icons icon--small">&#xE8B8;</i> Language &amp; Settings
+  </button>
 </div>
 
 <!--<div class="kd-graph shadow-z-1">-->
