--- a/app/assets/css/elements/_block.scss
+++ b/app/assets/css/elements/_block.scss
@@ -56,11 +56,7 @@
 }
 
 .block__footer-dark {
-  @include inset-shadow();
-  margin-left: 0;
-  margin-right: 0;
-  //padding: 1em;
-  background: #292929;
+  background-image: linear-gradient(to top, #111, rgba(29, 29, 29, 0)); 
 }
 
 .block__footer--ggg {
