--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -36,6 +36,7 @@
 @import 'parts/home-aside';
 @import 'parts/top-weapons';
 @import 'parts/first-in-lighthouse';
+@import 'parts/settings';
 @import 'parts/kd-graph';
 
 // Player card
