--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -37,10 +37,9 @@
         <div class="row" ng-if="currentMapInfo">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
-              Weapon usage on this map
+              Weapon usage by type
             </h3>
-            <span
-               data-content="{{'Weapon usage during Trials of Osiris on ' + (currentMapInfo.name || 'this map') + ' compared to all maps'}}" bs-popover>
+            <span data-content="Percentages are based on usage of weapon types in relation to total kills in their category.<hr />Difference to the average represents how much more or less that specific weapon type is used on {{currentMapInfo.name || 'this map'}} in relation to all other Trials of Osiris maps." bs-popover>
               <i class="material-icons icon--small info">&#xE8FD;</i>
             </span>
           </div>
@@ -61,7 +60,7 @@
               <div class="row top-weapons--map__row" ng-repeat="weapon in weapons">
                 <div class="col-xs-6 col-sm-4">
                   <img class="weapon-type-icon img-responsive"
-                       ng-src="{{'assets/img/weapon-icons/' + weapon.weapon_type.toLowerCase().replace(' ','-') + '.svg'}}"
+                       ng-src="assets/img/weapon-icons/{{weapon.weapon_type.toLowerCase().replace(' ', '-')}}.svg"
                        alt="{{weapon.weapon_type}}">
                 </div>
                 <div class="col-xs-3 col-sm-4 stat">
@@ -81,14 +80,18 @@
         <div class="row">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
-              Top weapons
+              Top weapons from Guardian.gg
             </h3>
-            <a
-              href="http://guardian.gg"
-              target="_blank"
-              data-content="Kindly provided by Guardian.gg. Click here to head over there for the complete list and a lot more cool stats." bs-popover>
+            <a ng-href="https://guardian.gg/en/weapon-stats?platform={{platformNumeric}}&mode=14&start={{trialsDates.begin}}&end={{trialsDates.end}}"
+               target="_blank"
+               data-content="Kindly provided by Guardian.gg. Click here to head over there for the complete list and a lot more cool stats!" bs-popover>
               <i class="material-icons icon--small info">&#xE148;</i>
             </a>
+          </div>
+          <div class="col-xs-12 col-sm-10" ng-if="!gggShow">
+            <div class="first-in-lighthouse__undecided">
+              Guardian.gg does not have any weapon stats to show (yet!).
+            </div>
           </div>
           <div class="col-xs-12 col-sm-5" ng-repeat="type in [gggWeapons[platformNumeric].primary,
                                      gggWeapons[platformNumeric].special] track by $index">
@@ -108,8 +111,11 @@
         <div class="row first-in-lighthouse">
           <div class="col-xs-12 col-sm-2">
             <h3 class="stat-header">
-              Fastest fireteams to reach the lighthouse
+              First fireteams to reach the lighthouse
             </h3>
+            <span data-content="Due to the way Bungie provides information on lighthouse visits, this leaderboard is subject to change when the tension is high." bs-popover>
+              <i class="material-icons icon--small info">&#xE8FD;</i>
+            </span>
           </div>
           <div class="col-xs-12 col-sm-10" ng-if="!lighthouseLeaderboard">
             <div class="first-in-lighthouse__undecided">
