Styling of Settings modal + Language dropdown

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -20,6 +20,7 @@
 @import 'elements/carousel';
 @import 'elements/dropdown-menu';
 @import 'elements/block';
+@import 'elements/select';
 
 // Main parts
 @import 'parts/controls';
