--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -93,7 +93,7 @@
 </div>
 
 <div class="settings-btn shadow-z-1">
-  <button class="btn btn-inline">
+  <button type="button" data-template-url="shared/modals/settings.modal.html" class="btn btn-inline" bs-modal>
     <i class="material-icons icon--small">&#xE8B8;</i> Language &amp; Settings
   </button>
 </div>
