--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -18,6 +18,11 @@
   box-shadow: inset 0 -175px 70px -100px rgba(0, 0, 0, .75);
 }
 
+.modal-hero--small {
+  min-height: 5em;
+  box-shadow: inset 0 -175px 70px -125px rgba(0, 0, 0, .75);
+}
+
 .modal-hero__header {
   flex-grow: 1;
   width: 100%;
