--- a/app/assets/css/main/_layout.scss
+++ b/app/assets/css/main/_layout.scss
@@ -140,6 +140,10 @@ hr {
     margin: .75em 0;
     background: linear-gradient(to right, rgba(200,200,200,0.1) 0%,rgba(200,200,200,.3) 50%,rgba(200,200,200,0.1) 100%);
   }
+
+  &.hr--faded {
+    background: linear-gradient(to right, rgba(200,200,200,0.1) 0%,rgba(200,200,200,.3) 50%,rgba(200,200,200,0.1) 100%);
+  }
 }
 
 .info {
