--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -34,92 +34,91 @@
       </div>
     </div>
   </div>
-  </div>
-  <div class="player__content player-quick-look player-quick-look__hide-stats" ng-if="hideStats">
-    <div class="player-overlay-content__header hide-stats__no-stats" ng-if="player.lastWeapons.length < 1">No Matches Found For This Week</div>
-    <div class="player-overlay-content__header hide-stats__header" ng-if="player.lastWeapons.length > 0">Weapon Type Used This Week</div>
-    <div class="row" ng-repeat="weapon in player.lastWeapons | orderObjectBy:'matches_played'">
-      <div class=" col-xs-3">
-        <img class="weapon-type-icon img-responsive"
-             ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName.toLowerCase().replace(' ','-') + '.svg'}}"
-             alt="{{weapon.weapon_type}}">
-      </div>
-      <div class=" col-xs-3">
-        <div class="">
-          <span ng-bind="(weapon.sum_kills / player.lastWeaponTotalKills) * 100 | number:2"></span>%
-        </div>
-      </div>
-      <div class=" col-xs-3">
-        <div class="">
-          <span ng-bind="(weapon.sum_headshots / weapon.sum_kills) * 100 | number:2"></span>%
-        </div>
-      </div>
-      <div class=" col-xs-3">
-        <div class="">
-          <span ng-bind="(weapon.matches_used / player.lastWeaponTotalPlayed) * 100 | number:2"></span>%
-        </div>
-      </div>
+</div>
+<div class="player__content player-quick-look">
+  <div class="row">
+    <div class="player-quick-look__form col-xs-9">
+      <div class="player-quick-look__form__matches" trials-history="player.activities.lastTwentyFive" player-kd="player.stats.killsDeathsRatio.basic.value"></div>
+      <label class="data-label">Recent Matches</label>
     </div>
-    <div class="row hide-stats__labels">
-      <div class=" col-xs-3">
-        <label class="data-label">Weapon Type</label>
+    <div class="player-quick-look__kd col-xs-3" data-template-url="shared/popovers/kd.popover.html" data-placement="left" bs-popover>
+      <div class="player-quick-look__kd__nr">
+        <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue || 'N/A'"></span>
       </div>
-      <div class=" col-xs-3">
-        <label class="data-label">Total Kills</label>
-      </div>
-      <div class=" col-xs-3">
-        <label class="data-label">Accuracy</label>
-      </div>
-      <div class=" col-xs-3">
-        <label class="data-label">Matches Used</label>
-      </div>
+      <label class="data-label text-right">K/D</label>
     </div>
   </div>
-  <div class="player__content player-quick-look" ng-if="!hideStats">
-    <div class="row">
-      <div class="player-quick-look__form col-xs-9">
-        <div class="player-quick-look__form__matches" trials-history="player.activities.lastTwentyFive" player-kd="player.stats.killsDeathsRatio.basic.value"></div>
-        <label class="data-label">Recent Matches</label>
+</div>
+<div class="player-main-stats">
+  <div class="row">
+    <div class="col-xs-3 stat" data-template-url="shared/popovers/currentWeek.popover.html" data-placement="top-left" bs-popover>
+      <span ng-bind="player.stats.activitiesWinPercentage.basic.displayValue || 'N/A'"></span>
+      <label>Wins</label>
+    </div>
+    <div class="col-xs-3 stat" data-template-url="shared/popovers/streak.popover.html" bs-popover>
+      <span ng-bind="player.activities.streak || 'N/A'"></span>
+      <span class="match player-main-stats__streak" ng-class="{'match--win': player.activities.recentActivity.standing === 0, 'match--loss': player.activities.recentActivity.standing === 1}"></span>
+      <label>Streak</label>
+    </div>
+    <div class="col-xs-3 stat">
+      <span ng-bind="(player.ggg.elo | number:0) || 'N/A'" data-template-url="shared/popovers/gggElo.popover.html" bs-popover></span>
+      <span>
+        <a href="https://guardian.gg/en/faq" target="_blank"
+           data-content="Elo is an account-wide rating system provided by Guardian.gg" bs-popover>
+          <i class="material-icons icon--small">&#xE8FD;</i>
+        </a>
+      </span>
+      <label>Elo Rating</label>
+    </div>
+    <div class="col-xs-3 stat" data-template-url="shared/popovers/lighthouse.popover.html" data-placement="top-right" bs-popover>
+      <span class="player-main-stats__lighthouse fail" ng-if="player.lighthouse.grimoire !== true">
+        <i class="material-icons">&#xE14C;</i>
+      </span>
+      <span class="player-main-stats__lighthouse success" ng-if="player.lighthouse.grimoire === true">
+        <!--<i class="material-icons" ng-if="player.lighthouse.accountCount">&#xE876;</i>-->
+        <span ng-bind="player.lighthouse.years ? getLighthouseCount(player, subdomain) + 'x' : 'Year 1'"></span>
+      </span>
+      <label>Flawless</label>
+    </div>
+  </div>
+</div>
+<div class="player__content player-quick-look player-quick-look__hide-stats">
+  <div class="player-overlay-content__header hide-stats__no-stats" ng-if="player.lastWeapons.length < 1">No Matches Found For This Week</div>
+  <div class="player-overlay-content__header hide-stats__header" ng-if="player.lastWeapons.length > 0">Weapon Type Used This Week</div>
+  <div class="row" ng-repeat="weapon in player.lastWeapons | orderObjectBy:'matches_played'">
+    <div class=" col-xs-3">
+      <img class="weapon-type-icon img-responsive"
+           ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName.toLowerCase().replace(' ','-') + '.svg'}}"
+           alt="{{weapon.weapon_type}}">
+    </div>
+    <div class=" col-xs-3">
+      <div class="">
+        <span ng-bind="(weapon.sum_kills / player.lastWeaponTotalKills) * 100 | number:2"></span>%
       </div>
-      <div class="player-quick-look__kd col-xs-3" data-template-url="shared/popovers/kd.popover.html" data-placement="left" bs-popover>
-        <div class="player-quick-look__kd__nr">
-          <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue || 'N/A'"></span>
-        </div>
-        <label class="data-label text-right">K/D</label>
+    </div>
+    <div class=" col-xs-3">
+      <div class="">
+        <span ng-bind="(weapon.sum_headshots / weapon.sum_kills) * 100 | number:2"></span>%
+      </div>
+    </div>
+    <div class=" col-xs-3">
+      <div class="">
+        <span ng-bind="(weapon.matches_used / player.lastWeaponTotalPlayed) * 100 | number:2"></span>%
       </div>
     </div>
   </div>
-  <div class="player-main-stats" ng-if="!hideStats">
-    <div class="row">
-      <div class="col-xs-3 stat" data-template-url="shared/popovers/currentWeek.popover.html" data-placement="top-left" bs-popover>
-        <span ng-bind="player.stats.activitiesWinPercentage.basic.displayValue || 'N/A'"></span>
-        <label>Wins</label>
-      </div>
-      <div class="col-xs-3 stat" data-template-url="shared/popovers/streak.popover.html" bs-popover>
-        <span ng-bind="player.activities.streak || 'N/A'"></span>
-        <span class="match player-main-stats__streak" ng-class="{'match--win': player.activities.recentActivity.standing === 0, 'match--loss': player.activities.recentActivity.standing === 1}"></span>
-        <label>Streak</label>
-      </div>
-      <div class="col-xs-3 stat">
-        <span ng-bind="(player.ggg.elo | number:0) || 'N/A'" data-template-url="shared/popovers/gggElo.popover.html" bs-popover></span>
-        <span>
-          <a href="https://guardian.gg/en/faq" target="_blank"
-             data-content="Elo is an account-wide rating system provided by Guardian.gg" bs-popover>
-            <i class="material-icons icon--small">&#xE8FD;</i>
-          </a>
-        </span>
-        <label>Elo Rating</label>
-      </div>
-      <div class="col-xs-3 stat" data-template-url="shared/popovers/lighthouse.popover.html" data-placement="top-right" bs-popover>
-        <span class="player-main-stats__lighthouse fail" ng-if="player.lighthouse.grimoire !== true">
-          <i class="material-icons">&#xE14C;</i>
-        </span>
-        <span class="player-main-stats__lighthouse success" ng-if="player.lighthouse.grimoire === true">
-          <!--<i class="material-icons" ng-if="player.lighthouse.accountCount">&#xE876;</i>-->
-          <span ng-bind="player.lighthouse.years ? getLighthouseCount(player, subdomain) + 'x' : 'Year 1'"></span>
-        </span>
-        <label>Flawless</label>
-      </div>
+  <div class="row hide-stats__labels">
+    <div class=" col-xs-3">
+      <label class="data-label">Weapon Type</label>
+    </div>
+    <div class=" col-xs-3">
+      <label class="data-label">Total Kills</label>
+    </div>
+    <div class=" col-xs-3">
+      <label class="data-label">Accuracy</label>
+    </div>
+    <div class=" col-xs-3">
+      <label class="data-label">Matches Used</label>
     </div>
   </div>
 </div>
