--- a/app/components/inventory/inventory.partial.html
+++ b/app/components/inventory/inventory.partial.html
@@ -1,15 +1,15 @@
 <div class="player-tab--equipped">
 
-  <div class="player-tab__section" style="padding-bottom: .4em;padding-top: .4em;">
+  <div class="player-tab__section" style="padding-bottom: .4em;padding-top: .4em;" ng-show="$storage.visibility.equipped.weapons">
     <div weapon-nodes="[player.inventory.weapons.primary, player.inventory.weapons.special, player.inventory.weapons.heavy]" top-weapons="player.topWeapons" hide-stats="hideStats"></div>
   </div>
-  <div class="player-tab__section" style="padding-bottom: .4em;padding-top: .4em;">
+  <div class="player-tab__section" style="padding-bottom: .4em;padding-top: .4em;" ng-show="$storage.visibility.equipped.armor">
     <div armor-nodes="player.inventory.armor.equipped" has-exotic="player.inventory.armor.equipped.definition.tierType === 6"></div>
   </div>
-  <div build-stats="[player.characterInfo.stats.STAT_INTELLECT, player.characterInfo.stats.STAT_DISCIPLINE, player.characterInfo.stats.STAT_STRENGTH]"></div>
-  <div build-stats="[player.characterInfo.stats.STAT_ARMOR, player.characterInfo.stats.STAT_RECOVERY, player.characterInfo.stats.STAT_AGILITY]"></div>
+  <div ng-show="$storage.visibility.equipped.build" build-stats="[player.characterInfo.stats.STAT_INTELLECT, player.characterInfo.stats.STAT_DISCIPLINE, player.characterInfo.stats.STAT_STRENGTH]"></div>
+  <div ng-show="$storage.visibility.equipped.build" build-stats="[player.characterInfo.stats.STAT_ARMOR, player.characterInfo.stats.STAT_RECOVERY, player.characterInfo.stats.STAT_AGILITY]"></div>
 
-  <div class="player-tab__section">
+  <div class="player-tab__section" ng-show="$storage.visibility.equipped.talents">
     <div class="row">
       <div class="player-perk col-xs-6" ng-repeat="subclassNode in player.inventory.subclass.displayedNodes | orderObjectBy:'column'"
            data-content="{{subclassNode.description}}" bs-popover>
