--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 </div>
-<div class="player__content player-quick-look">
+<div class="player__content player-quick-look" ng-show="$storage.visibility.kdRatio">
   <div class="row">
     <div class="player-quick-look__form col-xs-9">
       <div class="player-quick-look__form__matches" trials-history="player.activities.lastTwentyFive" player-kd="player.stats.killsDeathsRatio.basic.value"></div>
@@ -49,7 +49,7 @@
     </div>
   </div>
 </div>
-<div class="player-main-stats">
+<div class="player-main-stats" ng-show="$storage.visibility.mainStats">
   <div class="row">
     <div class="col-xs-3 stat" data-template-url="shared/popovers/currentWeek.popover.html" data-placement="top-left" bs-popover>
       <span ng-bind="player.stats.activitiesWinPercentage.basic.displayValue || 'N/A'"></span>
@@ -82,7 +82,7 @@
     </div>
   </div>
 </div>
-<div class="player__content player-quick-look player-quick-look__hide-stats">
+<div class="player__content player-quick-look player-quick-look__hide-stats" ng-show="$storage.visibility.weeklyStats">
   <div class="player-overlay-content__header hide-stats__no-stats" ng-if="player.lastWeapons.length < 1">No Matches Found For This Week</div>
   <div class="player-overlay-content__header hide-stats__header" ng-if="player.lastWeapons.length > 0">Weapon Type Used This Week</div>
   <div class="row" ng-repeat="weapon in player.lastWeapons | orderObjectBy:'matches_played'">
