Start on weekly stats

--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -46,6 +46,7 @@
 @import 'parts/player-overview';
 @import 'parts/player-quick-look';
 @import 'parts/player-main-stats';
+@import 'parts/player-this-week';
 @import 'parts/player-hazards';
 @import 'parts/recent-players';
 
