--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -82,43 +82,53 @@
     </div>
   </div>
 </div>
-<div class="player__content player-quick-look player-quick-look__hide-stats">
-  <div class="player-overlay-content__header hide-stats__no-stats" ng-if="player.lastWeapons.length < 1">No Matches Found For This Week</div>
-  <div class="player-overlay-content__header hide-stats__header" ng-if="player.lastWeapons.length > 0">Weapon Type Used This Week</div>
-  <div class="row" ng-repeat="weapon in player.lastWeapons | orderObjectBy:'matches_played'">
-    <div class=" col-xs-3">
-      <img class="weapon-type-icon img-responsive"
-           ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName.toLowerCase().replace(' ','-') + '.svg'}}"
-           alt="{{weapon.weapon_type}}">
-    </div>
-    <div class=" col-xs-3">
-      <div class="">
-        <span ng-bind="(weapon.sum_kills / player.lastWeaponTotalKills) * 100 | number:2"></span>%
+<div class="player__content player-this-week">
+  <div class="stat">
+    <div class="row row--small-gutter" ng-repeat="weapon in player.lastWeapons | orderObjectBy:'matches_played'">
+      <div class=" col-xs-3">
+        <img class="weapon-type-icon img-responsive"
+             ng-src="{{'assets/img/weapon-icons/' + weapon.itemTypeName.toLowerCase().replace(' ','-') + '.svg'}}"
+             alt="{{weapon.weapon_type}}">
+      </div>
+      <div class=" col-xs-3">
+        <div class="">
+          <span ng-bind="(weapon.sum_kills / player.lastWeaponTotalKills) * 100 | number:2"></span>%
+        </div>
+      </div>
+      <div class=" col-xs-3">
+        <div class="">
+          <span ng-bind="(weapon.sum_headshots / weapon.sum_kills) * 100 | number:2"></span>%
+        </div>
+      </div>
+      <div class=" col-xs-3">
+        <div class="">
+          <span ng-bind="(weapon.matches_used / player.lastWeaponTotalPlayed) * 100 | number:2"></span>%
+        </div>
       </div>
     </div>
-    <div class=" col-xs-3">
-      <div class="">
-        <span ng-bind="(weapon.sum_headshots / weapon.sum_kills) * 100 | number:2"></span>%
-      </div>
+    <label>Weapon usage</label>
+  </div>
+  <hr class="hr--minor">
+  <div class="row">
+    <div class="col-xs-3 stat">
+      <span ng-bind="player.currentWeek.matches"></span>
+      <label>Matches</label>
     </div>
-    <div class=" col-xs-3">
-      <div class="">
-        <span ng-bind="(weapon.matches_used / player.lastWeaponTotalPlayed) * 100 | number:2"></span>%
-      </div>
+    <div class="col-xs-3 stat">
+      <span ng-bind="player.currentWeek.wins"></span>
+      <label>Wins</label>
+    </div>
+    <div class="col-xs-3 stat">
+      <span ng-bind="player.currentWeek.losses"></span>
+      <label>Losses</label>
+    </div>
+    <div class="col-xs-3 stat">
+      <span ng-bind="player.currentWeek.kd"></span>
+      <label>K/D</label>
     </div>
   </div>
-  <div class="row hide-stats__labels">
-    <div class=" col-xs-3">
-      <label class="data-label">Weapon Type</label>
-    </div>
-    <div class=" col-xs-3">
-      <label class="data-label">Total Kills</label>
-    </div>
-    <div class=" col-xs-3">
-      <label class="data-label">Accuracy</label>
-    </div>
-    <div class=" col-xs-3">
-      <label class="data-label">Matches Used</label>
-    </div>
+  <hr class="hr--minor">
+  <div class="stat-header">
+    This week
   </div>
 </div>
