--- a/app/components/player/player.html
+++ b/app/components/player/player.html
@@ -2,23 +2,24 @@
 
   <div ng-include="'components/player/overview.partial.html'"></div>
 
-  <uib-tabset class="player-tabs" ng-if="!subdomain">
-    <uib-tab ng-show="$storage.visibility.equipped.tab" class="player-tab--equipped" heading="Equipped"
+  <uib-tabset class="player-tabs" ng-if="!subdomain"
+              ng-class="{'is-hidden': (!$storage.visibility.equipped.tab && !$storage.visibility.lastMatches.tab) ||
+                                      (!$storage.visibility.equipped.tab && !$storage.visibility.stats.tab) ||
+                                      (!$storage.visibility.lastMatches.tab && !$storage.visibility.stats.tab) ||
+                                      (!$storage.visibility.equipped.tab && !$storage.visibility.lastMatches.tab && !$storage.visibility.stats.tab)}">
+    <uib-tab ng-if="$storage.visibility.equipped.tab" class="player-tab--equipped" heading="Equipped"
              analytics-on analytics-event="Click" analytics-category="Equipped">
-      <div ng-show="$storage.visibility.equipped.tab"
-           ng-include="'components/inventory/inventory.partial.html'">
+      <div ng-include="'components/inventory/inventory.partial.html'">
       </div>
     </uib-tab>
-    <uib-tab ng-show="$storage.visibility.lastMatches.tab" class="player-tab--last-matches" heading="Last Matches"
+    <uib-tab ng-if="$storage.visibility.lastMatches.tab" class="player-tab--last-matches" heading="Last Matches"
              analytics-on analytics-event="Click" analytics-category="Last Matches" ng-click="getLastMatch(player)">
-      <div ng-show="$storage.visibility.lastMatches.tab"
-           ng-include="'components/matches/matches.partial.html'">
+      <div ng-include="'components/matches/matches.partial.html'">
       </div>
     </uib-tab>
-    <uib-tab ng-show="$storage.visibility.stats.tab" class="player-tab--stats" heading="Stats"
+    <uib-tab ng-if="$storage.visibility.stats.tab" class="player-tab--stats" heading="Stats"
              analytics-on analytics-event="Click" analytics-category="Stats">
-      <div ng-show="$storage.visibility.stats.tab"
-           ng-include="'components/stats/stats.partial.html'">
+      <div ng-include="'components/stats/stats.partial.html'">
       </div>
     </uib-tab>
   </uib-tabset>
