--- a/app/components/player/player.html
+++ b/app/components/player/player.html
@@ -3,10 +3,11 @@
   <div ng-include="'components/player/overview.partial.html'"></div>
 
   <uib-tabset class="player-tabs" ng-if="!subdomain"
-              ng-class="{'is-hidden': (!$storage.visibility.equipped.tab && !$storage.visibility.lastMatches.tab) ||
+              ng-class="{'is-hidden': !$storage.visibility.all &&
+                                      ((!$storage.visibility.equipped.tab && !$storage.visibility.lastMatches.tab) ||
                                       (!$storage.visibility.equipped.tab && !$storage.visibility.stats.tab) ||
                                       (!$storage.visibility.lastMatches.tab && !$storage.visibility.stats.tab) ||
-                                      (!$storage.visibility.equipped.tab && !$storage.visibility.lastMatches.tab && !$storage.visibility.stats.tab)}">
+                                      (!$storage.visibility.equipped.tab && !$storage.visibility.lastMatches.tab && !$storage.visibility.stats.tab))}">
     <uib-tab ng-if="$storage.visibility.all || $storage.visibility.equipped.tab" class="player-tab--equipped" heading="Equipped"
              analytics-on analytics-event="Click" analytics-category="Equipped">
       <div ng-include="'components/inventory/inventory.partial.html'">
