Controls bar is now fixed on screens large enough

--- a/app/assets/css/main/_layout.scss
+++ b/app/assets/css/main/_layout.scss
@@ -169,3 +169,14 @@ hr {
     margin-top: 1em;
   }
 }
+
+@media all and (min-height: 950px) and (min-width: 1281px) {
+  .controls-wrapper {
+    position: fixed;
+    height: 100vh;
+  }
+
+  .content {
+    padding-left: 25vw;
+  }
+}
