--- a/app/assets/css/parts/_settings.scss
+++ b/app/assets/css/parts/_settings.scss
@@ -50,9 +50,10 @@
 	}
 
 	> label {
-		font-size: .8em;
+		font-size: .7em;
+		font-family: 'Roboto', sans-serif;
 		text-align: right;
-		margin-right: .5em;
+		margin-right: .75em;
 		cursor: pointer;
 	}
 }
