--- a/app/assets/css/parts/_settings.scss
+++ b/app/assets/css/parts/_settings.scss
@@ -31,6 +31,7 @@
 	background: rgba(255, 255, 255, .03);
 	border-left: 1px solid #666;
 	opacity: .5;
+	flex-shrink: 0;
 
 	&:hover {
 		background: rgba(255, 255, 255, 0.1);
@@ -50,11 +51,14 @@
 	}
 
 	> label {
+		color: rgba(255, 255, 255, .5);
+		font-weight: normal;
 		font-size: .7em;
 		font-family: 'Roboto', sans-serif;
 		text-align: right;
 		margin-right: .75em;
 		cursor: pointer;
+		flex-shrink: 0;
 	}
 }
 
