--- a/app/components/stats/build.template.html
+++ b/app/components/stats/build.template.html
@@ -1,7 +1,7 @@
 <div class="player-tab__section">
   <div class="row">
     <div class="player-cooldown col-xs-4" ng-repeat="stat in stats track by $index" data-template-url="components/stats/cooldown.popover.html" bs-popover>
-      <div class="player-cooldown__label" ng-bind="stat.name"></div>
+      <div class="player-cooldown__label" translate="{{stat.name.toUpperCase()}}"></div>
       <div class="player-cooldown__nr">
         <uib-progress max="10" animate="true" class="progress not-rounded" ng-if="!stat.tiers">
           <uib-bar value="stat.value" class="progress-bar-primary"></uib-bar>
