Styled this week section

--- a/app/assets/css/elements/_stats.scss
+++ b/app/assets/css/elements/_stats.scss
@@ -24,6 +24,14 @@
   }
 }
 
+.stat-divider {
+  font-size: .9em;
+  vertical-align: 5%;
+  color: #aaa;
+  display: inline-block;
+  margin: 0 .25em;
+}
+
 .stat-header {
   @extend .data-label;
   color: #333;
