--- a/app/assets/css/parts/_player-this-week.scss
+++ b/app/assets/css/parts/_player-this-week.scss
@@ -1,8 +1,61 @@
 .player-this-week {
 	@include mild-inset-shadow();
 	background: #fafafa;
+	position: relative;
 
 	.player-quick-look.is-hidden + .player-main-stats.is-hidden + & {
 		@include inset-shadow();
+	}
+
+	> .stat-header {
+		font-size: 1em;
+		border-bottom: 1px solid #eee;
+		margin: 0 #{-$player-content-padding} $player-content-padding ;
+		padding: 0 $player-content-padding #{$player-content-padding / 2};
+
+		> span {
+			font-size: .8em;
+		}
+	}
+
+	&.is-irrelevant:before {
+		position: absolute;
+		content: "";
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		display: flex;
+		align-items: center;
+		text-align: center;
+		width: 100%;
+		background: rgba(255, 255, 255, 0.75);
+		z-index: 1;
+	}
+
+	&.is-irrelevant:after {
+		position: absolute;
+		content: "No matches played yet this week";
+		left: 50%;
+		top: 50%;
+		@extend .data-label;
+		z-index: 2;
+		transform: translate(-50%, -50%);
+		padding: 1em 1.5em;
+		background: white;
+		border-radius: .5em;
+		@include shadow(1);
+	}
+}
+
+.player-this-week__stats {
+	border-top: 1px solid #eee;
+	margin: $player-content-padding #{-$player-content-padding} 0;
+	padding: $player-content-padding $player-content-padding 0;
+}
+
+.player-this-week__weapons {
+	& + .player-this-week__weapons {
+		margin-top: .2em;
 	}
 }
