add kills and deaths for current week and autoload last matches if equipped tab is hidden

--- a/app/components/player/overview.partial.html
+++ b/app/components/player/overview.partial.html
@@ -160,7 +160,7 @@
         <label><span translate="WON"></span> / <span translate="LOST"></span></label>
       </div>
       <div class="col-xs-3 stat">
-        <span ng-bind="player.currentWeek.kills || 10"></span><div class="stat-divider">/</div><span ng-bind="player.currentWeek.deaths || 100"></span>
+        <span ng-bind="player.currentWeek.kills"></span><div class="stat-divider">/</div><span ng-bind="player.currentWeek.deaths"></span>
         <label><span translate="KILLS"></span> / <span translate="DEATHS"></span></label>
       </div>
       <div class="col-xs-3 stat">
